--- a/04-table-layout/index.html
+++ b/04-table-layout/index.html
@@ -1,1 +1,59 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Product Table</title>
+    <style>
+        table {
+            width: 80%;
+            border-collapse: collapse;
+            margin: 20px auto;
+        }
+        th, td {
+            border: 1px solid #ddd;
+            padding: 10px;
+            text-align: center;
+        }
+        th {
+            background-color: #f4f4f4;
+        }
+        img {
+            width: 100px;
+            height: auto;
+        }
+    </style>
+</head>
+<body>
+    <h1 style="text-align: center;">Product Details</h1>
+    <table>
+        <tr>
+            <th>Product Name</th>
+            <th>Price</th>
+            <th>Image</th>
+            <th>Description</th>
+        </tr>
+        <tr>
+            <td>Noise Cancelling Headphones</td>
+            <td>$120</td>
+            <td><img src="https://m.media-amazon.com/images/I/51EXj4BRQaL.jpg" 
+                alt="Noise Cancelling Headphones"></td>
+            <td>Premium headphones with active noise cancellation.</td>
+        </tr>
+        <tr>
+            <td>Fitness Tracker</td>
+            <td>$30</td>
+            <td><img src="https://m.media-amazon.com/images/I/61dV494jBgL.jpg" 
+                alt="Fitness Tracker"></td>
+            <td>Tracks steps, calories, and sleep patterns.</td>
+        </tr>
+        <tr>
+            <td>Gaming Keyboard</td>
+            <td>$75</td>
+            <td><img src="https://t3.ftcdn.net/jpg/05/14/83/78/360_F_514837813_Cg27F2rvPKDPATUcFnZvG6h94dnLeMit.jpg" 
+                alt="Gaming Keyboard"></td>
+            <td>RGB mechanical keyboard with customizable keys.</td>
+        </tr>
+    </table>
+</body>
+</html>
