--- a/03-client-side-image-mapping/index.html
+++ b/03-client-side-image-mapping/index.html
@@ -1,18 +1,24 @@
-<!DOCTYPE html> <html lang="en"> <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>Client-Side Image Map</title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Client-Side Image Map</title>
 </head>
 <body>
-<h1>Client-Side Image Map Example</h1>
-<p>Click on different areas of the image to visit various web pages:</p>
-<img src="https://encrypted- tbn0.gstatic.com/images?q=tbn:ANd9GcTZZalG7q9pGqYMuu6iPMbA96TJtkKWVRi44w&s"
-alt="Mapped Image" usemap="#imagemap" width="600">
-<map name="imagemap">
-<area shape="circle" coords="150,150,50" href="https://www.google.com"
-alt="Google" target="_blank">
-<area shape="rect" coords="300,50,500,200" href="https://www.wikipedia.org"
-alt="Wikipedia" target="_blank">
-<area shape="poly" coords="100,300,200,400,300,350" href="https://www.github.com" alt="GitHub" target="_blank">
-</map>
+    <h1>Client-Side Image Map Example</h1>
+    <p>Click on different areas of the image to visit various web pages:</p>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTZZalG7q9pGqYMuu6iPMbA96TJtkKWVRi44w&s"
+         alt="Mapped Image"
+         usemap="#imagemap"
+         width="600">
+    <map name="imagemap">
+        <area shape="circle" coords="150,150,50" href="https://www.google.com"
+              alt="Google" target="_blank">
+        <area shape="rect" coords="300,50,500,200" href="https://www.wikipedia.org"
+              alt="Wikipedia" target="_blank">
+        <area shape="poly" coords="100,300,200,400,300,350"
+              href="https://www.github.com" alt="GitHub" target="_blank">
+    </map>
 </body>
 </html>
