--- a/02-hyperlinks-and-images/index.html
+++ b/02-hyperlinks-and-images/index.html
@@ -1,18 +1,22 @@
-<!DOCTYPE html> <html lang="en"> <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Image and Hyperlinks Example</title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Image and Hyperlinks Example</title>
 </head>
 <body>
-<h1>Image and Hyperlinks Example</h1>
-<p>This is an example of embedding an image from a URL and adding hyperlinks:</p>
-<img src="https://images.pexels.com/photos/674010/pexels-photo-674010.jpeg" 
-alt="Peacock Feather"
-width="400">
-<hr>
-<p>Here are three useful links:</p> <ul>
-<li><a href="https://www.google.com" target="_blank">Visit Google</a></li>
-<li><a href="https://www.wikipedia.org" target="_blank">Visit Wikipedia</a></li>
-<li><a href="https://www.github.com" target="_blank">Visit GitHub</a></li> </ul>
+    <h1>Image and Hyperlinks Example</h1>
+    <p>This is an example of embedding an image from a URL and adding hyperlinks:</p>
+    <img src="https://images.pexels.com/photos/674010/pexels-photo-674010.jpeg" 
+         alt="Peacock Feather"
+         width="400">
+    <hr>
+    <p>Here are three useful links:</p>
+    <ul>
+        <li><a href="https://www.google.com" target="_blank">Visit Google</a></li>
+        <li><a href="https://www.wikipedia.org" target="_blank">Visit Wikipedia</a></li>
+        <li><a href="https://www.github.com" target="_blank">Visit GitHub</a></li>
+    </ul>
 </body>
 </html>
