--- a/06-iframe-youtube/index.html
+++ b/06-iframe-youtube/index.html
@@ -1,1 +1,36 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Responsive YouTube Video</title>
+    <style>
+        .video-container {
+            position: relative;
+            width: 100%;
+            padding-bottom: 56.25%;
+            height: 0;
+            overflow: hidden;
+        }
+        .video-container iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border: 0;
+        }
+    </style>
+</head>
+<body>
+    <h1>Embedding YouTube Video</h1>
+    <p>This is an example of embedding a responsive YouTube video.</p>
+    <div class="video-container">
+        <iframe
+            src="https://www.youtube.com/embed/6KL2QZ91kAM"
+            title="YouTube Video"
+            allowfullscreen>
+        </iframe>
+    </div>
+</body>
+</html>
