--- a/07-audio-video/index.html
+++ b/07-audio-video/index.html
@@ -1,1 +1,30 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Audio and Video Embed</title>
+</head>
+<body>
+    <h1>Embedding Audio and Video in HTML5</h1>
+    <h2>Nature Sounds</h2>
+    <audio controls autoplay loop>
+        <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-3.mp3" 
+                type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
+    <p>The audio above plays soothing nature sounds and will loop automatically.</p>
+    
+    <h2>Sample Video</h2>
+    <iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/ti39UJYgc5s"
+        title="YouTube video"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen>
+    </iframe>
+    <p>The video above is embedded from YouTube and includes controls for playback.</p>
+</body>
+</html>
