--- a/08-meta-tags/index.html
+++ b/08-meta-tags/index.html
@@ -1,1 +1,16 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A beginner-friendly HTML5 webpage with meta tags and redirection.">
+    <meta name="author" content="Your Name">
+    <meta http-equiv="refresh" content="5; url=https://www.google.com">
+    <title>HTML5 Meta Tags Example</title>
+</head>
+<body>
+    <h1>Welcome to My Webpage</h1>
+    <p>This webpage demonstrates the use of HTML5 meta tags.</p>
+    <p>You will be redirected to Google in 5 seconds.</p>
+</body>
+</html>
