--- a/09-iframe-website/index.html
+++ b/09-iframe-website/index.html
@@ -1,1 +1,19 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Embed Wikipedia with iframe</title>
+</head>
+<body>
+    <h1>Embedding a Website Using iframe</h1>
+    <p>The Wikipedia homepage is embedded below:</p>
+    <!-- Embedding Wikipedia using iframe -->
+    <iframe
+        src="https://www.wikipedia.org"
+        width="800px"
+        height="600px"
+        style="border: 2px solid black;">
+    </iframe>
+</body>
+</html>
