--- a/10-canvas-drawing/index.html
+++ b/10-canvas-drawing/index.html
@@ -1,1 +1,32 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Canvas Star</title>
+</head>
+<body>
+    <h1>Canvas Star</h1>
+    <canvas id="canvas" width="400" height="400" style="border: 1px solid black;"></canvas>
+    <button onclick="drawStar()">Change Color</button>
+    <script>
+        const canvas = document.getElementById("canvas");
+        const ctx = canvas.getContext("2d");
+        
+        function drawStar() {
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
+            ctx.beginPath();
+            for (let i = 0; i < 5; i++) {
+                const x = 200 + 100 * Math.cos((2 * Math.PI * i) / 5 - Math.PI / 2);
+                const y = 200 + 100 * Math.sin((2 * Math.PI * i) / 5 - Math.PI / 2);
+                i === 0 ? ctx.moveTo(x, y) : ctx.lineTo(x, y);
+            }
+            ctx.closePath();
+            ctx.fillStyle = '#' + Math.floor(Math.random() * 16777215).toString(16);
+            ctx.fill();
+        }
+        
+        drawStar();
+    </script>
+</body>
+</html>
